--- a/family/templates/home.html
+++ b/family/templates/home.html
@@ -9,10 +9,11 @@ Williams Finance
 
 <div class="row">
     <div class="col">
-        <form>
+        <form method="post" action="{% url 'create_item' %}">
+            {% csrf_token %}
             <div class="mb-3">
-                <label for="exampleInputEmail1" class="form-label">Email address</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                <label for="email" class="form-label">Email address</label>
+                <input type="email" class="form-control" id="email" name="email" aria-describedby="emailHelp">
                 <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
             </div>
             <div class="mb-3">
@@ -31,14 +32,15 @@ Williams Finance
 <div class="row">
     <div class="col">
         <h1>This week</h1>
+        
         <div class="accordion" id="accordionExample">
   <div class="accordion-item">
     <h2 class="accordion-header">
-      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
         Income
       </button>
     </h2>
-    <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+    <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
       <div class="accordion-body">
         <table class="table">
             <thead>
@@ -46,6 +48,7 @@ Williams Finance
                 <th scope="col">Net</th>
                 <th scope="col">Taxes</th>
                 <th scope="col">Date</th>
+                <th scope="col">Type</th>
                 </tr>
             </thead>
             <tbody>
@@ -54,6 +57,7 @@ Williams Finance
                 <td>{{ pay.net }}</td>
                 <td>{{ pay.tax }}</td>
                 <td>{{ pay.date }}</td>
+                <td>{{ pay.inc_type }}</td>
                 </tr>
                 {% endfor %}
             </tbody>
@@ -64,39 +68,27 @@ Williams Finance
   <div class="accordion-item">
     <h2 class="accordion-header">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-        Accordion Item #2
+        Investments
       </button>
     </h2>
     <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
       <div class="accordion-body">
-        <strong>This is the second item’s accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It’s also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-      </div>
-    </div>
-  </div>
-  <div class="accordion-item">
-    <h2 class="accordion-header">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-        Recurring Expenses $ 1000.00
-      </button>
-    </h2>
-    <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-      <div class="accordion-body">
         <table class="table">
             <thead>
-                <tr></tr>
-                    <th scope="col">Vendor</th>
-                    <th scope="col">Description</th>
-                    <th scope="col">Amount</th>
-                    <th scope="col">Due Date</th>
+                <tr>
+                <th scope="col">Vendor</th>
+                <th scope="col">Description</th>
+                <th scope="col">Amount</th>
+                <th scope="col">Due Date</th>
                 </tr>
             </thead>
             <tbody>
-                {% for bill in bills %}
+                {% for invest in investments %}
                 <tr>
-                    <th scope="row">{{ bill.vendor }}</th>
-                    <td>{{ bill.description }}</td>
-                    <td>{{ bill.amount }}</td>
-                    <td>{{ bill.due_date }}</td>
+                <th scope="row">{{ invest.account.account_name }}</th>
+                <td>{{ invest.description }}</td>
+                <td>{{ invest.amount }}</td>
+                <td>{{ invest.date }}</td>
                 </tr>
                 {% endfor %}
             </tbody>
@@ -104,18 +96,29 @@ Williams Finance
       </div>
     </div>
   </div>
-</div>
-        
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+        Savings
+      </button>
+    </h2>
+    <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <strong>This is the third item’s accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It’s also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+      </div>
     </div>
-</div>
-
-<div class="row">
-    <div class="col">
-        <h1>Recurring Bills</h1>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+        Recurring Expenses
+      </button>
+    </h2>
+    <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
         <table class="table">
             <thead>
                 <tr>
-                
                 <th scope="col">Vendor</th>
                 <th scope="col">Description</th>
                 <th scope="col">Amount</th>
@@ -133,66 +136,44 @@ Williams Finance
                 {% endfor %}
             </tbody>
         </table>
+      </div>
     </div>
-</div>
-
-<div class="row">
-    <div class="col">
-        <h1>income Table</h1>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+        One Off Purchases
+      </button>
+    </h2>
+    <div id="collapseFive" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
         <table class="table">
             <thead>
                 <tr>
-                <th scope="col">#</th>
-                <th scope="col">Net</th>
-                <th scope="col">Taxes</th>
+                <th scope="col">Amount</th>
+                <th scope="col">Vendor</th>
+                <th scope="col">Description</th>
                 <th scope="col">Date</th>
                 </tr>
             </thead>
             <tbody>
-                {% for pay  in income %}
+                {% for expense in expenses %}
                 <tr>
-                <th scope="row">1</th>
-                <td>{{ pay.net }}</td>
-                <td>{{ pay.tax }}</td>
-                <td>{{ pay.date }}</td>
+                <td>{{ expense.amount }}</td>
+                <td>{{ expense.vendor }}</td>
+                <td>{{ expense.description }}</td>
+                <td>{{ expense.date }}</td>
                 </tr>
                 {% endfor %}
             </tbody>
         </table>
+      </div>
     </div>
-
-    <div class="col">
-        <h1>Expenses Table</h1>
-        <table class="table">
-            <thead>
-                <tr>
-                <th scope="col">#</th>
-                <th scope="col">First</th>
-                <th scope="col">Last</th>
-                <th scope="col">Handle</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                <th scope="row">1</th>
-                <td>Mark</td>
-                <td>Otto</td>
-                <td>@mdo</td>
-                </tr>
-                <tr>
-                <th scope="row">2</th>
-                <td>Jacob</td>
-                <td>Thornton</td>
-                <td>@fat</td>
-                </tr>
-                <tr>
-                <th scope="row">3</th>
-                <td>John</td>
-                <td>Doe</td>
-                <td>@social</td>
-                </tr>
-            </tbody>
-        </table>
+  </div>
+</div>
+        
     </div>
 </div>
+
+
 {% endblock %}
